clusters/local/apps/whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: whoami
  namespace: apps

spec:
  replicas: 1

  selector:
    matchLabels:
      app: whoami

  template:
    metadata:
      labels:
        app: whoami

    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.11.0

          ports:
            - containerPort: 80
