clusters/local/apps/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: whoami
  namespace: apps

spec:
  ingressClassName: nginx

  rules:
    - host: whoami.localhost

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: whoami

                port:
                  number: 80
